Update SecureGate action reference in security scan workflow

--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -23,7 +23,7 @@ jobs:
       
       - name: Run SecureGate Scanner
         id: securegate
-        uses: yourusername/securegate@v1
+        uses: Mahesh-Langote/securegate@v1
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           config-path: .github/security-gate.yml
